# proj-ref-spark-delta

./: .gitignore  README.md  pyproject.toml
data/project-01/bronze copy/: .part-00000-b8831c8a-d7b9-454a-88fb-1c93996a0c10-c000.snappy.parquet.crc  .part-00001-b8831c8a-d7b9-454a-88fb-1c93996a0c10-c000.snappy.parquet.crc  .part-00003-b8831c8a-d7b9-454a-88fb-1c93996a0c10-c000.snappy.parquet.crc  .part-00004-b8831c8a-d7b9-454a-88fb-1c93996a0c10-c000.snappy.parquet.crc  .part-00005-b8831c8a-d7b9-454a-88fb-1c93996a0c10-c000.snappy.parquet.crc  .part-00006-b8831c8a-d7b9-454a-88fb-1c93996a0c10-c000.snappy.parquet.crc  currencyexchange.parquet  date.parquet  part-00000-b8831c8a-d7b9-454a-88fb-1c93996a0c10-c000.snappy.parquet  (+5 more)
src/project-01-contoso/: MiscDemo.py
src/project-03-SBDL/: main-complete.ipynb  main_complete.py
src/project-04-APIs/: 02-exemplo-json.py  02-explicacao.md  03-explicacao.md  04-exemplo.py  04-explicacao.md  06-exemplo.py  07-explicacao_.md  08-explicacao_.md  09-exemplo_.py  09-explicacao_.md  10-explicacao_.md  11-exemplo_.py  12-exemplo_.py  12-explicacao_.md  13-exemplo_.py
src/project-04-exemplos-conceito/: 01-basico-json.py  03-exemplo.py  05-explicacao.md  07-exemplo_.py  08-exemplo_.py  10-exemplo_.py  11-explicacao_.md  13-explicacao_.md  teste.py
src/project-05-conceitos/: README.md  scripts.md  simulation_cdc_scd.py  simulation_scd.py  src_gold.py  test_data_pipeline.py
src/project-05-conceitos-aplicado/: simulation_cdc.py  src_bronze.py  src_silver.py
src/project-3-SBDL/: README.md  main.py  sbdl_submit.sh
(+21 files in other folders)
