[tool.poetry]
name = "proj-ref-spark-delta"
version = "0.1.0"
description = "Projeto de referência para Delta Lake com Apache Spark"
authors = ["Marcus Queiroz <mffpqueiroz@gmail.com>"]
packages = [{include = "src"}] 
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.5,<=3.12.5"
pandas = "^2.2.2"
numpy = "^1.24.2"
jupyter = "^1.1.1"
taskipy = "^1.13.0"
crewai = "^0.51.1"
notebook = "^7.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
sqlalchemy = "^2.0.32"
kafka-python = "^2.0.2"
pyarrow = "^17.0.0"
streamlit = "^1.38.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
#format = "isort . && blue ."
#test = "pytest -v"
#run = "python app/main.py"
#kill = "kill -9 $(lsof -t -i :8000)"
landing = "python src/deltalake/landing.py"
bronze = "python src/deltalake/bronze.py"
silver = "python src/deltalake/silver.py"
gold = "python src/deltalake/gold.py"
teste = "python src/deltalake/teste.py"